2013-07-05  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py: Added support for the system font setting (issue #36).

2013-07-03  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* preferences.py: Added support for the system font setting.

2013-06-30  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* NEWS: 2.3.1 release.
	* tweetentry.py: Fixed a twitter event entry bug.
	* NEWS: 2.3 release.

2013-06-29  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ca.po: Added new Catalan translation.  Thanks Adolfo Jayme!

2013-06-25  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* view.py (FeedView): Fixed a box object bug.

2013-06-23  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* ar.po: Updated Arabic translation.  Thanks Humaidan Mohammed!
	* gfeedline.glade: Set the application icon for wnck taskbar
	  (issue #51).

2013-06-22  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* window.py (NotebookTabLabel): Fixed a feedview objects lost
	  problem (issue #50).
	* es_ES.po: Updated Spanish translation.  Thanks Adolfo Jayme!
	* de_DE.po: Updated German translation.  Thanks t_bb_!
	* window.py: Fixed feedview objects lost problems.
	* menu.py: Fixed a Twitter User TimeLine option for the profile.

2013-06-18  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* share/profile.glade, twitter/output.py, view.py: Added profile
	  pane on User Timeline feeds.

2013-06-17  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* updatewindow.py, share/update.glade: Added support for spell
	  checker with python-gtkspellcheck (issue #11).
	* twitter/api.py, preferences/feedsource.py: Added a new option
	  for including retweets in List/User TimeLine.

2013-06-15  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py: Added tooltips for user description on
	  Twitter user icons.
	* menu.py, twitter/tweetentry.py: Added support for opening new
	  tabs from Twittter user icons (issue #37).

2013-06-14  Yoshizumi Endo  <y-endo@ceres.dti.ne.jp>

	* twitter/tweetentry.py, menu.py: Added support for opening new